facet-macros-emit/tests/codegen/snapshots/r#mod__codegen__function__function_with_doc_comments_and_quotes.snap
---
source: facet-macros-emit/tests/codegen/function.rs
expression: "expand_function(r#\"\n        /// Hello \"world\", if that is your real name\n        fn greet(name: String) -> String {\n            format!(\"Hello, {}...?\", name)\n        }\n        \"#)"
---
#[allow(non_snake_case)]
mod __fn_shape_greet {
    use super::*;
    pub(super) fn inner(name: String) -> String {
        format!("Hello, {}...?", name)
    }
    #[derive(Debug, Clone)]
    pub struct FunctionShape<Args, Ret, Generics = ()> {
        pub name: &'static str,
        pub param_count: usize,
        pub param_names: &'static [&'static str],
        pub documentation: &'static [&'static str],
        _args: core::marker::PhantomData<Args>,
        _ret: core::marker::PhantomData<Ret>,
        _generics: core::marker::PhantomData<Generics>,
    }
    impl<Args, Ret, Generics> FunctionShape<Args, Ret, Generics> {
        pub const fn new(
            name: &'static str,
            param_count: usize,
            param_names: &'static [&'static str],
            documentation: &'static [&'static str],
        ) -> Self {
            Self {
                name,
                param_count,
                param_names,
                documentation,
                _args: core::marker::PhantomData,
                _ret: core::marker::PhantomData,
                _generics: core::marker::PhantomData,
            }
        }
    }
    pub fn shape() -> FunctionShape<(String), String, ()> {
        FunctionShape::new(
            "greet",
            1usize,
            &["name"],
            &[" Hello \"world\", if that is your real name"],
        )
    }
}
pub fn greet(name: String) -> String {
    __fn_shape_greet::inner(name)
}
pub use __fn_shape_greet::shape as GREET_SHAPE;
