facet-macros-emit/tests/codegen/snapshots/r#mod__codegen__function__function_with_mixed_attributes.snap
---
source: facet-macros-emit/tests/codegen/function.rs
expression: "expand_function(r#\"\n        /// Documentation comment\n        #[derive(Debug)]\n        /// More documentation\n        fn mixed_attrs() {\n            println!(\"test\");\n        }\n        \"#)"
---
#[allow(non_snake_case)]
mod __fn_shape_mixed_attrs {
    use super::*;
    pub(super) fn inner() -> () {
        println!("test");
    }
    #[derive(Debug, Clone)]
    pub struct FunctionShape<Args, Ret, Generics = ()> {
        pub name: &'static str,
        pub param_count: usize,
        pub param_names: &'static [&'static str],
        pub documentation: &'static [&'static str],
        _args: core::marker::PhantomData<Args>,
        _ret: core::marker::PhantomData<Ret>,
        _generics: core::marker::PhantomData<Generics>,
    }
    impl<Args, Ret, Generics> FunctionShape<Args, Ret, Generics> {
        pub const fn new(
            name: &'static str,
            param_count: usize,
            param_names: &'static [&'static str],
            documentation: &'static [&'static str],
        ) -> Self {
            Self {
                name,
                param_count,
                param_names,
                documentation,
                _args: core::marker::PhantomData,
                _ret: core::marker::PhantomData,
                _generics: core::marker::PhantomData,
            }
        }
    }
    pub fn shape() -> FunctionShape<(), (), ()> {
        FunctionShape::new(
            "mixed_attrs",
            0usize,
            &[],
            &[" Documentation comment", " More documentation"],
        )
    }
}
pub fn mixed_attrs() -> () {
    __fn_shape_mixed_attrs::inner()
}
pub use __fn_shape_mixed_attrs::shape as MIXED_ATTRS_SHAPE;
