facet-macros-emit/tests/codegen/snapshots/r#mod__codegen__function__function_with_no_parameters.snap
---
source: facet-macros-emit/tests/codegen/function.rs
expression: "expand_function(r#\"\n        fn no_params() -> &'static str {\n            \"No parameters here!\"\n        }\n        \"#)"
---
#[allow(non_snake_case)]
mod __fn_shape_no_params {
    use super::*;
    pub(super) fn inner() -> &'static str {
        "No parameters here!"
    }
    #[derive(Debug, Clone)]
    pub struct FunctionShape<Args, Ret, Generics = ()> {
        pub name: &'static str,
        pub param_count: usize,
        pub param_names: &'static [&'static str],
        _args: core::marker::PhantomData<Args>,
        _ret: core::marker::PhantomData<Ret>,
        _generics: core::marker::PhantomData<Generics>,
    }
    impl<Args, Ret, Generics> FunctionShape<Args, Ret, Generics> {
        pub const fn new(
            name: &'static str,
            param_count: usize,
            param_names: &'static [&'static str],
        ) -> Self {
            Self {
                name,
                param_count,
                param_names,
                _args: core::marker::PhantomData,
                _ret: core::marker::PhantomData,
                _generics: core::marker::PhantomData,
            }
        }
    }
    pub fn shape() -> FunctionShape<(), &'static str, ()> {
        FunctionShape::new("no_params", 0usize, &[])
    }
}
pub fn no_params() -> &'static str {
    __fn_shape_no_params::inner()
}
pub use __fn_shape_no_params::shape as NO_PARAMS_SHAPE;
